--- a/.github/ISSUE_TEMPLATE/request_feature.yml
+++ b/.github/ISSUE_TEMPLATE/request_feature.yml
@@ -52,3 +52,5 @@ body:
           required: true
         - label: I understand that not all feature requests will be accepted, and if declined, I won't resubmit the same request.
           required: true
+        - label: If this is an issue with an extension, I should be opening an issue in the extension's repository.
+          required: false
