--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
     
     <!-- New permissions for downloading and installing APKs -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES"/>
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
     
     <!-- For Android 13+ (API 33+) - Granular media permissions -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     
     <!-- TV app permissions and features -->
     <uses-feature android:name="android.software.leanback" android:required="false" />
@@ -73,6 +76,20 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="mangayomi" android:host="add-repo" />
         </intent-filter>  
+
+        <intent-filter android:label="Add Repo">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="tachiyomi" android:host="add-repo" />
+        </intent-filter>  
+
+        <intent-filter android:label="Add Repo">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="aniyomi" android:host="add-repo" />
+        </intent-filter>  
         
         </activity>
 
@@ -98,7 +115,7 @@
         </provider>
 
         <meta-data android:name="flutterEmbedding" android:value="2"/>
-        <meta-data android:name="flutter.deeplinking.enabled" android:value="true"/>
+        <meta-data android:name="flutter_deeplinking_enabled" android:value="false" />
         <meta-data android:name="io.flutter.embedding.android.EnableImpeller" android:value="false"/>
     </application>
 
