chore: deeplinks related setup

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -39,6 +39,7 @@
                 <string>anymex</string>
                 <string>sugoireads</string>
                 <string>dar</string>
+                <string>mangayomi</string>
             </array>
         </dict>
     </array>
