--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = anymex
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.anymex
+PRODUCT_BUNDLE_IDENTIFIER = com.ryan.anymex
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
