--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 2.9.8+17
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   algorithmic: ^0.0.11
@@ -14,7 +15,6 @@ dependencies:
   carousel_slider: ^5.0.0
   checkmark: ^0.0.2+1
   crypto: any
-  dart_eval: ^0.7.10
   device_info_plus: ^11.2.2
   dio: ^5.8.0+1
   dynamic_color: ^1.7.0
@@ -26,17 +26,14 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_inappwebview: ^6.1.5
-  flutter_local_notifications: ^18.0.1
+  # flutter_local_notifications: ^18.0.1
   flutter_markdown: ^0.7.6
   flutter_native_splash: ^2.4.4
   flutter_qjs:
     git:
       url: https://github.com/kodjodevf/flutter_qjs.git
       ref: main
-  flutter_riverpod: ^2.6.1
-  flutter_rust_bridge: ^2.7.0
   flutter_web_auth_2: ^4.0.2
-  freezed_annotation: ^2.4.4
   get: ^4.6.6
   grouped_list: ^6.0.0
   hive: ^2.2.3
@@ -49,13 +46,6 @@ dependencies:
   iconsax: ^0.0.8
   install_plugin: ^2.1.0
   intl: ^0.20.1
-  isar: ^3.1.0+1
-  isar_flutter_libs:
-    git:
-      url: https://github.com/MrLittleWhite/isar_flutter_libs.git
-  js_packer: ^0.0.5
-  json_annotation: ^4.9.0
-  json_path: ^0.7.4
   kenburns_nullsafety: ^1.0.1
   manga_page_view: ^1.0.5
   media_kit_libs_video: ^1.0.6
@@ -63,36 +53,40 @@ dependencies:
     git:
       url: https://github.com/Schnitzel5/media-kit.git
       path: media_kit_video
+  dartotsu_extension_bridge:
+    git:
+      url: https://github.com/RyanYuuki/DartotsuExtensionBridge.git
+      ref: master
 
   outlined_text: ^1.0.1
   package_info_plus: any
-  path: any
+  path: ^1.9.0
   path_provider: any
   permission_handler: ^11.3.1
   provider: ^6.1.2
-  pseudom: ^1.0.1
-  riverpod_annotation: ^2.6.1
-  screen_brightness: 2.1.5 
+  screen_brightness: 2.1.5
   scrollable_positioned_list: ^0.3.8
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.0+3
   super_sliver_list: ^0.4.1
-  uni_links: ^0.5.1
-  uni_links_desktop: any
   url_launcher: any
   volume_controller: 3.4.0
   window_manager: ^0.4.3
-  xpath_selector_html_parser: ^3.0.1
+  isar: 3.1.0+1
+  isar_flutter_libs: 3.1.0+1
+  app_links: ^6.4.0
 
 dev_dependencies:
   build_runner: ^2.4.11
   change_app_package_name: ^1.4.0
   flutter_lints: ^3.0.0
-  flutter_launcher_icons: ^0.14.2
   flutter_test:
     sdk: flutter
-  hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.2
   inno_bundle: ^0.7.4
+
+# dependency_overrides:
+#   path: ^1.9.1
 
 flutter_launcher_icons:
   android: false
